<resources>
    <string name="app_name">RadioStation</string>


    <string name="hello_world">测试AudioRecord，实现录音功能</string>
    <string name="menu_settings">Settings</string>
    <string name="view_record_wav">录音WAV文件</string>
    <string name="view_record_amr">录音AMR文件</string>
    <string name="view_stop">停止录音</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>

    <string name="connect_server_progress">连接中</string>
    <string name="connect_server_ok">连接成功</string>

    <string name="get_data_progress">获取中</string>
    <string name="get_data_ok">获取成功</string>

    <string name="main_tab_name_1">首页</string>
    <string name="main_tab_name_2">消息</string>
    <string name="main_tab_name_3">日志</string>
    <string name="main_tab_name_4">功能</string>
    <string name="main_tab_name_5">设置</string>

    <string name="log_viewpager_title_1">遇险接收</string>
    <string name="log_viewpager_title_2">常规接收</string>
    <string name="log_viewpager_title_3">发送</string>

    <string name="address_viewpager_title_1">船台</string>
    <string name="address_viewpager_title_2">岸台</string>
    <string name="address_viewpager_title_3">船队</string>
    <string name="address_viewpager_title_4">PSTN</string>

    <string name="homepage_ssb_0">SSB</string>
    <string name="homepage_ssb_1">DSC</string>
    <string name="homepage_ssb_2">AM</string>
    <string name="homepage_ssb_3">NBDP</string>


    <string name="homepage_agc_0">FAST</string>
    <string name="homepage_agc_1">SLOW</string>
    <string name="homepage_agc_2">MGC</string>


    <string name="homepage_sql_0">ON</string>
    <string name="homepage_sql_1">OFF</string>
    <string name="homepage_sql_2">SET</string>

    <string name="homepage_att_0">S</string>
    <string name="homepage_att_1">PRE</string>
    <string name="homepage_att_2">L</string>

    <string name="homepage_pow_0">H</string>
    <string name="homepage_pow_1">M</string>
    <string name="homepage_pow_2">L</string>


</resources>
