<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/id_tab1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/id_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_viewpager_title_1"
                android:textColor="@color/tab_text_selected"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/id_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_viewpager_title_2"
                android:textColor="@color/homepage_text_color"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/id_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_viewpager_title_3"
                android:textColor="@color/homepage_text_color"
                android:textSize="13sp" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/id_tab_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/tab_line"/>

</LinearLayout>