<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true">

    <com.qiuhong.qhlibrary.QHTitleView.QHTitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/bottom_layout_in_ship_info_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_unselect"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!--text layout-->
        <LinearLayout
            style="@style/wrap_layout"
            android:orientation="horizontal">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton0"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/homepage_pow_0"
                    android:textColor="@color/homepage_text_color"
                    android:theme="@style/AppTheme"/>

                <View style="@style/bg_line"/>

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/homepage_pow_1"
                    android:textColor="@color/homepage_text_color"
                    android:theme="@style/AppTheme"/>

                <View style="@style/bg_line"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/homepage_pow_2"
                    android:textColor="@color/homepage_text_color"
                    android:theme="@style/AppTheme"/>

            </RadioGroup>

        </LinearLayout>

        <!--button layout-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/single_select"
                android:gravity="center"
                android:onClick="cancelButtonTapped"
                android:text="取消"
                android:textColor="#fff"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/single_select"
                android:gravity="center"
                android:onClick="confirmButtonTapped"
                android:text="确认"
                android:textColor="#fff"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>