<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cetcme.radiostation.Main2Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<com.qiuhong.qhlibrary.QHTitleView.QHTitleView-->
            <!--android:id="@+id/main_QHTitleView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"/>-->

        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#636363"/>


        <!--导航栏-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/tab_layout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_alignParentBottom="true"
                      android:orientation="horizontal"
                      android:background="#EEEEEE">

            <RelativeLayout
                android:id="@+id/rl_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:button="@null"
                    android:background="@null"
                    android:checked="true"
                    android:clickable="true"
                    android:drawablePadding="2dp"
                    android:drawableTop="@drawable/tab_1_selector"
                    android:gravity="center"
                    android:text="@string/main_tab_name_1"
                    android:textColor="@color/tab_text_unselected"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignRight="@id/rb_1"
                    android:layout_alignTop="@id/rb_1"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="-6dp"
                    android:layout_gravity="right"
                    android:background="@drawable/msg_num_shape"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="-1"
                    android:textColor="@color/white"
                    android:textSize="10sp"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:focusable="true">

                <RadioButton
                    android:id="@+id/rb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:button="@null"
                    android:clickable="true"
                    android:drawablePadding="2dp"
                    android:drawableTop="@drawable/tab_2_selector"
                    android:gravity="center"
                    android:text="@string/main_tab_name_2"
                    android:textColor="@color/tab_text_unselected"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignRight="@id/rb_2"
                    android:layout_alignTop="@id/rb_2"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="-6dp"
                    android:layout_gravity="right"
                    android:background="@drawable/msg_num_shape"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="-1"
                    android:textColor="@color/white"
                    android:textSize="10sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:button="@null"
                    android:clickable="true"
                    android:drawablePadding="2dp"
                    android:drawableTop="@drawable/tab_3_selector"
                    android:gravity="center"
                    android:text="@string/main_tab_name_3"
                    android:textColor="@color/tab_text_unselected"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tv_3"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignRight="@id/rb_3"
                    android:layout_alignTop="@id/rb_3"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="-6dp"
                    android:layout_gravity="right"
                    android:background="@drawable/msg_num_shape"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="-1"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rb_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:button="@null"
                    android:clickable="true"
                    android:drawablePadding="2dp"
                    android:drawableTop="@drawable/tab_4_selector"
                    android:gravity="center"
                    android:text="@string/main_tab_name_4"
                    android:textColor="@color/tab_text_unselected"
                    android:textSize="11sp" />


                <TextView
                    android:id="@+id/tv_4"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignRight="@id/rb_4"
                    android:layout_alignTop="@id/rb_4"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="-6dp"
                    android:layout_gravity="right"
                    android:background="@drawable/msg_num_shape"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="-1"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rb_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:button="@null"
                    android:clickable="true"
                    android:drawablePadding="2dp"
                    android:drawableTop="@drawable/tab_5_selector"
                    android:gravity="center"
                    android:text="@string/main_tab_name_5"
                    android:textColor="@color/tab_text_unselected"
                    android:textSize="11sp" />


                <TextView
                    android:id="@+id/tv_5"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignRight="@id/rb_5"
                    android:layout_alignTop="@id/rb_5"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="-6dp"
                    android:layout_gravity="right"
                    android:background="@drawable/msg_num_shape"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="-1"
                    android:textColor="@color/white"
                    android:textSize="10sp"/>
            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
